--- a/tasks/15 asynchronous/index.html
+++ b/tasks/15 asynchronous/index.html
@@ -16,7 +16,7 @@
             on click of below button fetch todos and display the title and completed status in a table 
 
     </pre>
-    <button> fetch data from api. </button>
+    <button onclick="fetchTodos()"> fetch data from api. </button>
 
     // create a table here.
 </body>
@@ -28,7 +28,7 @@
             .then(response => response.json())
             .then(json => console.log(json))
     }
-    
+
 </script>
 
 </html>
