--- a/tasks/14 todo list/index copy.html
+++ b/tasks/14 todo list/index copy.html
@@ -11,7 +11,7 @@
 <body>
     <h1>To do list</h>
         <form onsubmit="handleSubmit(event)">
-            <input type="text" required id="todo_name_id" name="todo_name" value="one" />
+            <input type="text" required id="todo_name_id" name="todo_name" value="" />
             <input type="submit">
         </form>
         <ul>
@@ -21,32 +21,37 @@
 
         <script>
 
-            let todos = ["task-one", "task-two",];
+            // let todos = ["task-one", "task-two",];
+            let todos = ["ONE"];
+            let items = [{
+                name: one,
+                quantiy: 10
+            }, {
+                name: two,
+                quantiy: 20
+            }];
 
-            let list_in_string = ``
-            todos.forEach((task) => {
-                list_in_string = list_in_string + `<li>${task}</li>`
-            })
-            document.getElementsByTagName("ul")[0].innerHTML = list_in_string
+            function convertTodoArrayToLiString(todos) {
+                let temp_str = ""
+                todos.forEach((task) => {
+                    temp_str = temp_str + `<li>${task}</li>`
+                })
+                return temp_str
+            }
+
+            // document.getElementsByTagName("ul")1[0].innerHTML = list_in_string
 
             const handleSubmit = (e) => {
+                e.preventDefault()
                 let input_value = e.target.todo_name.value
 
-
-                document.getElementsByTagName("ul")[0].innerHTML = `
-                    <li>one</li>
-                    <li>one</li>
-                `
-
+                // document.getElementsByTagName("ul")[0].innerHTML = 
 
                 if (input_value) {
+                    todos.push(input_value)
 
-                    let new_list = document.createElement("li")
-                    new_list.innerHTML = input_value
-
-                    console.log(new_list)
-
-                    document.getElementsByTagName("ul")[0].appendChild(new_list)
+                    let list_in_string = convertTodoArrayToLiString(todos)
+                    document.getElementsByTagName("ul")[0].innerHTML = list_in_string
 
                     e.target.todo_name.value = ""
                 }
